# iidm-viewer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  install.sh  pyproject.toml  test_ieee14.xiidm
.github/workflows/: ci.yml  release.yml
docs/: active-tab-gate.md  data-explorer.md  filters.md  future-interactive-viewer.md  hmi-mirror-script.md  host-sharing.md  injection-map.md  loadflow.md  n-k-followups.md  n-k-variant-comparison.md  network-map.md  pmax-visualization.md  profiling-rerun-cost.md  security-analysis.md  short-circuit-analysis.md  tabs.md  threading.md  voltage-analysis.md  worker-round-trips.md
iidm_viewer/: active_tab.py  app.py  app_state.py  cache_backend.py  caches.py  change_log.py  cli.py  component_creation.py  component_registry.py  components.py  data_explorer.py  data_view.py  diagram_services.py  diagrams.py  extension_creation.py  extensions_data.py  extensions_explorer.py  filters.py  injection_map.py  io_options.py  io_options_schema.py  leaflet_scalar_map.py  lf_parameters.py  lf_parameters_schema.py  lf_report.py  lf_report_dialog.py  loadflow.py  map_component.py  nad_component.py  nad_interactive.py  navigation.py  network_info.py  network_info_core.py  network_loader.py  network_map.py  network_reduction.py  network_reduction_actions.py  operational_limits.py  operational_limits_tab.py  pmax_visualization.py  (+18 more)
iidm_viewer/frontend/map_component/: README.md  index.html  package-lock.json  package.json  vite.config.ts
iidm_viewer/frontend/map_component/src/: main.ts
iidm_viewer/frontend/nad_component/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
iidm_viewer/frontend/nad_component/src/: main.ts
iidm_viewer/frontend/sld_component/: README.md  index.html  package-lock.json  package.json  vite.config.ts
iidm_viewer/frontend/sld_component/src/: main.ts
iidm_viewer/qt/: README.md  __init__.py  __main__.py  bridge.js  change_log_panel.py  cli.py  create_panel.py  data_explorer_tab.py  extensions_explorer_tab.py  injection_map_tab.py  lf_parameters_dialog.py  lf_report_dialog.py  load_options_dialog.py  main_window.py  map_tab.py  nad_tab.py  network_reduction_dialog.py  nk_variant_dock.py  operational_limits_tab.py  overview_tab.py  params_form.py  pmax_visualization_tab.py  reactive_curves_tab.py  save_network_dialog.py  security_analysis_tab.py  session_script_dialog.py  short_circuit_analysis_tab.py  sld_tab.py  state.py  voltage_analysis_tab.py  web_view.py
iidm_viewer/web/: README.md  __init__.py  __main__.py  app.py  cli.py  state.py
tests/: conftest.py  test_app_state.py  test_cache_backend.py  test_change_log.py  test_change_log_phase_b.py  test_change_log_unification.py  test_cli.py  test_component_creation.py  test_component_registry.py  test_components.py  test_data_explorer.py  test_data_view.py  test_diagrams.py  test_extension_creation.py  test_extensions_data.py  test_extensions_explorer.py  test_filters.py  test_injection_map.py  test_io_options.py  test_io_options_schema.py  test_leaflet_scalar_map.py  test_lf_parameters.py  test_lf_parameters_schema.py  test_lf_report.py  test_lf_report_dialog.py  test_load_network.py  test_loadflow.py  test_loadflow_shared.py  test_map_component.py  test_nad_component.py  test_nad_interactive.py  test_navigation.py  test_network_export.py  test_network_info.py  test_network_info_core.py  test_network_map.py  test_network_reduction.py  test_network_reduction_actions.py  test_nicegui_prototype.py  test_nk_dock.py  (+20 more)
