[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iidm-viewer"
version = "0.4.0"
description = "A Streamlit app to visualize and explore IIDM network topology and data"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.30",
    "pypowsybl>=1.14.0",
    "pandas",
    "plotly",
]

[project.scripts]
iidm-viewer = "iidm_viewer.cli:main"

[tool.pytest.ini_options]
addopts = "--cov=iidm_viewer --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["iidm_viewer"]
omit = ["iidm_viewer/cli.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
