[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iidm-viewer"
version = "0.7.1"
description = "A Streamlit app to visualize and explore IIDM network topology and data"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.30",
    "pypowsybl>=1.14.0",
    "pypowsybl-jupyter>=1.3.0",
    "pandas",
    "plotly",
]

[project.scripts]
iidm-viewer = "iidm_viewer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["iidm_viewer"]
# Only the built JS bundle needs to ship; keep npm source artefacts
# (src/, node_modules/, package.json, vite.config.ts, tsconfig.json,
# the pre-build index.html) out of the wheel.
exclude = [
    "iidm_viewer/frontend/nad_component/src",
    "iidm_viewer/frontend/nad_component/node_modules",
    "iidm_viewer/frontend/nad_component/package.json",
    "iidm_viewer/frontend/nad_component/package-lock.json",
    "iidm_viewer/frontend/nad_component/vite.config.ts",
    "iidm_viewer/frontend/nad_component/tsconfig.json",
    "iidm_viewer/frontend/nad_component/.gitignore",
    "iidm_viewer/frontend/nad_component/index.html",
    "iidm_viewer/frontend/sld_component/src",
    "iidm_viewer/frontend/sld_component/node_modules",
    "iidm_viewer/frontend/sld_component/package.json",
    "iidm_viewer/frontend/sld_component/package-lock.json",
    "iidm_viewer/frontend/sld_component/vite.config.ts",
    "iidm_viewer/frontend/sld_component/tsconfig.json",
    "iidm_viewer/frontend/sld_component/.gitignore",
    "iidm_viewer/frontend/sld_component/index.html",
    "iidm_viewer/frontend/map_component/src",
    "iidm_viewer/frontend/map_component/node_modules",
    "iidm_viewer/frontend/map_component/package.json",
    "iidm_viewer/frontend/map_component/package-lock.json",
    "iidm_viewer/frontend/map_component/vite.config.ts",
    "iidm_viewer/frontend/map_component/tsconfig.json",
    "iidm_viewer/frontend/map_component/.gitignore",
    "iidm_viewer/frontend/map_component/index.html",
]

[tool.pytest.ini_options]
addopts = "--cov=iidm_viewer --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["iidm_viewer"]
omit = ["iidm_viewer/cli.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
